--- a/index.html
+++ b/index.html
@@ -22,14 +22,18 @@
         <h1>Nasyonalite mwen se:</h1>
         <br>
         <div class="d-grid gap-2 d-md-block">
-          <button id="#btnHaiti" style="margin-right: 25px" type="button" class="btn btn-light"><img height="300" width="300" src="https://i.imgur.com/cjYI5xj.png"><h3>Ayisyen (Haitiano)</h3></button>
-          <button style="margin-left: 25px" type="button" class="btn btn-light"><img  height="300" width="300" src="https://i.imgur.com/TFW6Kuv.png"><h3>Venezolano</h3></button>
+          <button id="#btnHaiti" onclick="window.location.href = '/HaitiAlteracaoOuAutoricacao';" style="margin-right: 25px" type="button" class="btn btn-light">
+            <img height="300" width="300" src="https://i.imgur.com/cjYI5xj.png"><h3>Ayisyen (Haitiano)</h3>
+          </button>
+          <button id="#btnVenezuela" onclick="window.location.href = '/VenezuelaAlteracaoOuAutoricacao';" style="margin-left: 25px" type="button" class="btn btn-light">
+            <img  height="300" width="300" src="https://i.imgur.com/TFW6Kuv.png"><h3>Venezolano</h3>
+          </button>
         </div>
         
         <br>
         <br>
         <div class="progress w-50" role="progressbar" aria-label="Basic example" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">
-          <div class="progress-bar w-00 p-3"></div>
+          <div class="progress-bar" style="width: 01%"></div>
         </div>
       </center>
 </body>
