--- a/haiti/apHaiti/haitiValidadeCRNM.html
+++ b/haiti/apHaiti/haitiValidadeCRNM.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Èske dokiman mwen an valab?</title>
     <link rel="stylesheet" type="text/css" href="styles\nacionalidade.css">
-    <script src="scripts\nacionalidade.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
@@ -23,19 +22,13 @@
         <img height="300" style="margin-bottom: 50px;" src="https://i.imgur.com/qYxV1PZ.png">
         <br>
         <div class="d-grid gap-2 d-md-block">
-          <button id="#btnHaiti" style="margin-right: 25px" type="button" class="btn btn-outline-primary"><h3>Wi, li poko genyen</h3></button>
-          <button id="#btnHaiti" style="margin-right: 25px" type="button" class="btn btn-outline-danger"><h3>Non, ou deja genyen</h3></button>
-        </div>
+          <button id="#btnHaiti" onclick="window.location.href = '/HaitiValidadeCRNM';" style="margin-right: 25px" type="button" class="btn btn-outline-primary"><h3>Wi, li poko genyen</h3></button>
+          <button id="#btnHaiti" onclick="window.location.href = '/';" style="margin-right: 25px" type="button" class="btn btn-outline-danger"><h3>Non, ou deja genyen</h3></button>
+        </div>  
         <br>
         <br>
         <div class="progress w-50" role="progressbar" aria-label="Basic example" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">
-          <div class="progress-bar w-10 p-3"></div>
-        </div>
-                
-        <br>
-        <br>
-        <div class="progress w-50" role="progressbar" aria-label="Basic example" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">
-          <div class="progress-bar w-00 p-3"></div>
+          <div class="progress-bar" style="width: 20%"></div>
         </div>
       </center>
 
