--- a/haiti/haitiARorAP.html
+++ b/haiti/haitiARorAP.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Èske mwen deja gen yon dokiman?</title>
     <link rel="stylesheet" type="text/css" href="styles\nacionalidade.css">
-    <script src="scripts\nacionalidade.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
@@ -30,7 +29,7 @@
         <br>
         <br>
         <div class="progress w-50" role="progressbar" aria-label="Basic example" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">
-          <div class="progress-bar w-00 p-3"></div>
+          <div class="progress-bar" style="width: 10%"></div>
         </div>
       </center>
 </body>
