--- a/venezuela/apVenezuela/venezuelaDocValido/venezuelaDados2.html
+++ b/venezuela/apVenezuela/venezuelaDocValido/venezuelaDados2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dados</title>
+    <script src="scripts\coleta.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
@@ -36,14 +37,14 @@
 
 
             <label class="form-label">Estado civil</label>
-            <select class="form-select form-select-lg mb-3" aria-label="Large select example">
+            <select id="estadoCivil" class="form-select form-select-lg mb-3" aria-label="Large select example">
                 <option selected>Haga clic para seleccionar una opción</option>
                 <option value="1">Soltero(a)</option>
                 <option value="2">Casado(a)</option>
                 <option value="3">Divorciado(a)</option>
-                <option value="3">Unión estable</option>
-                <option value="3">Viudo(a)</option>
-              </select>
+                <option value="4">Unión estable</option>
+                <option value="5">Viudo(a)</option>
+            </select>
 
               <br>
               <div class="mb-3">
@@ -76,8 +77,8 @@
 
             <br>
 
-
-            <button type="button" onclick="window.location.href = '/VenezuelaFinal2';" style="align-content: end;margin-left: 380px;" class="btn btn-success">Próximo</button>
+            <!-- onclick="window.location.href = '/VenezuelaFinal2'; -->
+            <button type="button" onclick="enviarDados();" " style="align-content: end;margin-left: 380px;" class="btn btn-success">Próximo</button>
           </div>
           <div class="col">
           <!--Coluna não utilizada-->
