--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Qual nacionalidade</title>
     <link rel="stylesheet" type="text/css" href="styles\nacionalidade.css">
-    <script src="scripts\nacionalidade.js"></script>
+    <script type="module" src="scripts\nacionalidade.mjs"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
@@ -22,11 +22,12 @@
         <h1>Nasyonalite mwen se:</h1>
         <br>
         <div class="d-grid gap-2 d-md-block">
-          <button id="#btnHaiti" onclick="window.location.href = '/HaitiAlteracaoOuAutoricacao';" style="margin-right: 25px" type="button" class="btn btn-light">
+          <button id="btnHaiti" onclick="window.location.href = '/HaitiAlteracaoOuAutoricacao';" style="margin-right: 25px" type="button" class="btn btn-light">
             <img height="300" width="300" src="https://i.imgur.com/cjYI5xj.png"><h3>Ayisyen (Haitiano)</h3>
           </button>
-          <button id="#btnVenezuela" onclick="window.location.href = '/VenezuelaAlteracaoOuAutoricacao';" style="margin-left: 25px" type="button" class="btn btn-light">
-            <img  height="300" width="300" src="https://i.imgur.com/TFW6Kuv.png"><h3>Venezolano</h3>
+          <!--  -->
+          <button id="btnVenezuela" onclick="window.location.href = '/VenezuelaAlteracaoOuAutoricacao';"  style="margin-left: 25px" type="button" class="btn btn-light">
+            <img height="300" width="300" src="https://i.imgur.com/TFW6Kuv.png"><h3>Venezolano</h3>
           </button>
         </div>
         
