--- a/haiti/apHaiti/haitiValidadeCRNM.html
+++ b/haiti/apHaiti/haitiValidadeCRNM.html
@@ -22,8 +22,8 @@
         <img height="300" style="margin-bottom: 50px;" src="https://i.imgur.com/qYxV1PZ.png">
         <br>
         <div class="d-grid gap-2 d-md-block">
-          <button id="#btnHaiti" onclick="window.location.href = '/HaitiValidadeCRNM';" style="margin-right: 25px" type="button" class="btn btn-outline-primary"><h3>Wi, li poko genyen</h3></button>
-          <button id="#btnHaiti" onclick="window.location.href = '/';" style="margin-right: 25px" type="button" class="btn btn-outline-danger"><h3>Non, ou deja genyen</h3></button>
+          <button id="#btnHaiti" onclick="window.location.href = '/HaitiDados3';" style="margin-right: 25px" type="button" class="btn btn-outline-primary"><h3>Wi, li poko genyen</h3></button>
+          <button id="#btnHaiti" onclick="window.location.href = '/HaitiContatarPF';" style="margin-right: 25px" type="button" class="btn btn-outline-danger"><h3>Non, ou deja genyen</h3></button>
         </div>  
         <br>
         <br>
