--- a/haiti/haitiARorAP.html
+++ b/haiti/haitiARorAP.html
@@ -22,8 +22,8 @@
         <img height="300" style="margin-bottom: 50px;" src="https://i.imgur.com/58lBJCe.png">
         <br>
         <div class="d-grid gap-2 d-md-block">
-          <button id="#btnHaiti" style="margin-right: 25px" type="button" class="btn btn-outline-primary"><h3>Wi, mwen te deja genyen <br> oswa mwen genyen</h3></button>
-          <button id="#btnHaiti" style="margin-right: 25px" type="button" class="btn btn-outline-danger"><h3>Mwen pa janm te genyen</h3></button>
+          <button id="#btnHaiti" onclick="window.location.href = '/HaitiValidadeCRNM';" style="margin-right: 25px" type="button" class="btn btn-outline-primary"><h3>Wi, mwen te deja genyen <br> oswa mwen genyen</h3></button>
+          <button id="#btnHaiti" onclick="window.location.href = '/HaitiDados';" style="margin-right: 25px" type="button" class="btn btn-outline-danger"><h3>Mwen pa janm te genyen</h3></button>
         </div>
                 
         <br>
